[FEATURE] #107 adds background-calculation after ajax-request  * fixes width-stretching after ajax-load

--- a/themes/sbvfrd/less/bootstrap_fix_table.less
+++ b/themes/sbvfrd/less/bootstrap_fix_table.less
@@ -23,6 +23,7 @@
     & > .row {
       display: table;
       min-width: 102%;
+      max-width: 102%;
       table-layout: fixed;
     }
 
